--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </br> If you call delete method on this links then it will only delete relation between those entities
 </br> for example https://learning-man-sys.herokuapp.com/api/courses/1/batches (name of batch as body) will delte relation between that batch and course
 </br> Post method creates relation between entities or if in above exapmle batch with given name doesn't exist than on applying post</br>
-method on that link will first create batch with that name and than add relation between batch and course same for all other links
+method on that link will first create batch with that name and than add relation between batch and course( same for all other links)
 
 </body>
 </html>
