--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
         
     </head>
     <body>
-        <h1>Shreyas Bhanderi</h1>
-        <h1>shreyas.bhanderi@nagarro.com</h1>
+        <h3>Welcome to Learning Management Solution by Shreyas Bhanderi</h1>
+        <h4><a href="mailto:shreyas.bhanderi@nagarro.com">Send mail</a></h4>
         <h2>Following calls have Get, Post, Put and Delete methods</h2>
     </br> /api/courses, /api/subjects, /api/students, /api/teachers
 </br> add id to link to get or delete entity of that id (ex :- https://learning-man-sys.herokuapp.com/api/courses/1 )
