--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         
     </head>
-    <body>
+    <body align="center">
         <h3>Welcome to Learning Management Solution by Shreyas Bhanderi</h1>
         <h4><a href="mailto:shreyas.bhanderi@nagarro.com">shreyas.bhanderi@nagarro.com</a></h4>
         
