--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,54 @@
 <html>
-    <head>
-        
-    </head>
-    <body align="center">
-        <h3>Welcome to Learning Management Solution by Shreyas Bhanderi</h1>
-        <h4><a href="mailto:shreyas.bhanderi@nagarro.com">shreyas.bhanderi@nagarro.com</a></h4>
-        
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="resources/style_files/w3.css">
+    <link rel="stylesheet" href="resources/style_files/css">
+    <link rel="stylesheet" href="resources/style_files/font-awesome.min.css">
+    <%@ page isELIgnored="false"%>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--===============================================================================================-->
+        <link rel="icon" type="image/png" href="https://colorlib.com/etc/lf/Login_v2/images/icons/favicon.ico">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/bootstrap.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/font-awesome.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/material-design-iconic-font.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/animate.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/hamburgers.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/animsition.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/select2.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/daterangepicker.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="resources/style_files/util.css">
+        <link rel="stylesheet" type="text/css" href="resources/style_files/main.css">
+        <style>
+            html,
+            body,
+            h1,
+            h2,
+            h3,
+            h4,
+            h5 {
+                font-family: "Raleway", sans-serif
+            }
+        </style>
+</head>
+
+<body align="center">
+    <h3>Welcome to Learning Management Solution by Shreyas Bhanderi</h3>
+    <h4>
+        <a href="mailto:shreyas.bhanderi@nagarro.com">shreyas.bhanderi@nagarro.com</a>
+    </h4>
+    <div class="w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:70%">
+        <p>dead</p>
+    </div>
 </body>
+
 </html>
