--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,24 @@
         <!--===============================================================================================-->
         <link rel="icon" type="image/png" href="https://colorlib.com/etc/lf/Login_v2/images/icons/favicon.ico">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/bootstrap.min.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/bootstrap.min.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/font-awesome.min.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/font-awesome.min.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/material-design-iconic-font.min.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/material-design-iconic-font.min.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/animate.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/animate.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/hamburgers.min.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/hamburgers.min.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/animsition.min.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/animsition.min.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/select2.min.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/select2.min.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/daterangepicker.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/daterangepicker.css">
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="/style_files/util.css">
-        <link rel="stylesheet" type="text/css" href="/style_files/main.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/util.css">
+        <link rel="stylesheet" type="text/html" href="/style_files/main.css">
         <style>
             html,
             body,
