--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style_files/w3.css">
-    <link rel="stylesheet" href="/style_files/css">
-    <link rel="stylesheet" href="/style_files/font-awesome.min.css">
+    <link rel="stylesheet" type="text/html" href="/style_files/w3.css">
+    <link rel="stylesheet" type="text/html" href="/style_files/css">
+    <link rel="stylesheet" type="text/html" href="/style_files/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--===============================================================================================-->
         <link rel="icon" type="image/png" href="https://colorlib.com/etc/lf/Login_v2/images/icons/favicon.ico">
