--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/html" href="/style_files/w3.css">
     <link rel="stylesheet" type="text/html" href="/style_files/css">
     <link rel="stylesheet" type="text/html" href="/style_files/font-awesome.min.css">
+    <link rel="stylesheet" type="text/html" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="https://colorlib.com/etc/lf/Login_v2/images/icons/favicon.ico">
