--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,9 @@
     </style>
 </head>
 
-<body align="center">
-    <h3>Welcome to Learning Management Solution by Shreyas Bhanderi</h3>
-    <h4>
+<body >
+    <h3 class="w3-center">Welcome to Learning Management Solution by Shreyas Bhanderi</h3>
+    <h4 class="w3-center">
         <a href="mailto:shreyas.bhanderi@nagarro.com">shreyas.bhanderi@nagarro.com</a>
     </h4>
     <div class="w3-container">
