--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
     <!--===============================================================================================-->
@@ -49,14 +49,35 @@
     </style>
 </head>
 
-<body >
+<body>
+    </br>
     <h3 class="w3-center">Welcome to Learning Management Solution by Shreyas Bhanderi</h3>
+    </br>
     <h4 class="w3-center">
         <a href="mailto:shreyas.bhanderi@nagarro.com">shreyas.bhanderi@nagarro.com</a>
     </h4>
-    <div class="w3-container">
+    </br>
+    <div class="w3-container w3-center">
         <div class="w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:70%">
-            <p>dead</p>
+            <p>Courses</p>
+        </div>
+    </div>
+    </br>
+    <div class="w3-container w3-center">
+        <div class="w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:70%">
+            <p>Subjects</p>
+        </div>
+    </div>
+    </br>
+    <div class="w3-container w3-center">
+        <div class="w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:70%">
+            <p>Students</p>
+        </div>
+    </div>
+    </br>
+    <div class="w3-container w3-center">
+        <div class="w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:70%">
+            <p>Teachers</p>
         </div>
     </div>
 </body>
