--- a/public/index.html
+++ b/public/index.html
@@ -58,23 +58,23 @@
     </h4>
     </br>
     <div class="w3-container w3-center">
-        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:40%; height:15%">
+        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="padding: 5% 5% 5% 5%; width:40%; height:15%">
             <p>Courses</p>
         </div>
     </div>
     <div class="w3-container w3-center">
-        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:40%; height:15%">
+        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="padding: 5% 5% 5% 5%; width:40%; height:15%">
             <p>Subjects</p>
         </div>
     </div>
     </br>
     <div class="w3-container w3-center">
-        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:40%; height:15%">
+        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="padding: 5% 5% 5% 5%; width:40%; height:15%">
             <p>Students</p>
         </div>
     </div>
     <div class="w3-container w3-center">
-        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:40%; height:15%">
+        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="padding: 5% 5% 5% 5%; width:40%; height:15%">
             <p>Teachers</p>
         </div>
     </div>
