--- a/public/index.html
+++ b/public/index.html
@@ -68,11 +68,11 @@
     </div>
     </br>
     <div class="w3-container w3-center">
-        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; padding: 5% 5% 5% 5%; width:40%; height:15%">
+        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
             <p>Students</p>
         </div>
     
-        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:right; padding: 5% 5% 5% 5%; width:40%; height:15%">
+        <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:right; margin: 5% 5% 5% 5%; width:40%; height:15%">
             <p>Teachers</p>
         </div>
     </div>
