--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     </br>
     <div class="w3-container w3-center">
         <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
-            <p style="float: left;"><font size="5"><b>Courses</b></font></p>
+            <p style="float: left; margin: 10px 10px 50px 0px"><font size="5"><b>Courses</b></font></p>
         </div>
     
         <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:right; margin: 5% 5% 5% 5%; width:40%; height:15%">
