--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
     </h4>
     </br>
     <div class="w3-container ">
-        <div class=" w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
-            <p ><font size="5" style="float: left; margin: 10px 10px 50px 0px"><b>Courses</b></font></p>
+        <div class=" w3-display-container w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
+            <p ><font class="w3-display-topleft" size="5" style="float: left; margin: 10px 10px"><b>Courses</b></font></p>
         </div>
     
         <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:right; margin: 5% 5% 5% 5%; width:40%; height:15%">
