--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,9 @@
     <div class="w3-container ">
         <div class=" w3-display-container w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
             <p ><font class="w3-display-topleft" size="5" style="float: left; margin: 10px 10px"><b>Courses</b></font></p>
+            <button class="w3-btn w3-aqua w3-border w3-round-large" style="float: right; margin: 10px 10px 10px 10px">See All</button>
+        </br>
+            <button class="w3-btn w3-blue w3-border w3-round-large " style="float: right; margin: 10px 10px 10px 10px">See All</button>
         </div>
     
         <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:right; margin: 5% 5% 5% 5%; width:40%; height:15%">
