--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
             <p ><font class="w3-display-topleft" size="5" style="float: left; margin: 10px 10px"><b>Courses</b></font></p>
             <button class="w3-display-topright w3-btn w3-aqua w3-border w3-round-large" style="float: right; margin: 10px 10px 10px 10px">See All</button>
         
-
+            <input class="w3-display-bottomleft w3-input w3-border" name="course" type="text" placeholder="Enter the name of the course to add it in database">
             <button class="w3-display-bottomright w3-btn w3-blue w3-border w3-round-large " style="float: right; margin: 10px 10px 10px 10px">Add Course</button>
         </div>
     
