--- a/public/index.html
+++ b/public/index.html
@@ -59,11 +59,11 @@
     </br>
     <div class="w3-container ">
         <div class=" w3-display-container w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
-            <p ><font class="w3-display-topleft" size="5" style="float: left; margin: 10px 10px"><b>Courses</b></font></p>
-            <button class="w3-display-topright w3-btn w3-aqua w3-border w3-round-large" style="float: right; margin: 10px 10px 10px 10px">See All</button>
+            <p ><font class="w3-display-topleft" size="5" style="float: left; margin: 20px 30px"><b>Courses</b></font></p>
+            <button class="w3-display-topright w3-btn w3-aqua w3-border w3-round-large" style="float: right; margin: 20px 20px 20px 20px">See All</button>
         
-            <input class="w3-display-bottomleft w3-input w3-border" name="course" type="text" placeholder="Enter the name of the course to add it in database">
-            <button class="w3-display-bottomright w3-btn w3-blue w3-border w3-round-large " style="float: right; margin: 10px 10px 10px 10px">Add Course</button>
+            <input class="w3-display-bottomleft w3-input w3-border" style="float: left; margin: 20px 30px" name="course" type="text" placeholder="Enter the name of the course to add it in database">
+            <button class="w3-display-bottomright w3-btn w3-blue w3-border w3-round-large " style="float: right; margin: 20px 20px 20px 20px">Add Course</button>
         </div>
     
         <div class="w3-center w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:right; margin: 5% 5% 5% 5%; width:40%; height:15%">
