--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-    <script src = "cart.js"></script>
-    <script src = "student.js"></script>
-    <script src = "teacher.js"></script>
-    <script src = "subject.js"></script>
+    <script type="application/javascript" src = "cart.js"></script>
+    <script type="application/javascript" src = "student.js"></script>
+    <script type="application/javascript" src = "teacher.js"></script>
+    <script type="application/javascript" src = "subject.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
