--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,15 @@
     </h4>
     </br>
     <div  class="w3-container ">
-        <div id="main"></div>
+            <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <p>Some text in the Modal..</p>
+                    </div>
+                  
+                  </div>
         <div class=" w3-display-container w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
             <p>
                 <font class="w3-display-topleft" size="5" style="float: left; margin: 20px 30px">
