--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
                     <!-- Modal content -->
                     <div class="modal-content">
-                      <span class="close">&times;</span>
+                      <span id="span" class="close">&times;</span>
                       <p>Some text in the Modal..</p>
                     </div>
                   
