--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 
-<body>
+<body style="overflow-y: scroll;">
     </br>
     <h3 class="w3-center">Welcome to Learning Management Solution by Shreyas Bhanderi</h3>
     </br>
@@ -49,7 +49,7 @@
         <a href="mailto:shreyas.bhanderi@nagarro.com">shreyas.bhanderi@nagarro.com</a>
     </h4>
     </br>
-    <div class="w3-container ">
+    <div class="w3-container " >
 
         <div class=" w3-display-container w3-card w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="float:left; margin: 5% 5% 5% 5%; width:40%; height:15%">
             <p>
@@ -132,7 +132,7 @@
             <button id="btnTeacherAdd" class="w3-display-bottomright w3-btn w3-blue w3-border w3-round-large w3-round-large " style="float: right; margin: 20px 20px 20px 20px">Add Teacher</button>
         
         </div>
-        <div id="myModal" class="modal"style="z-index: 10;">
+        <div id="myModal" class="modal"style="z-index: 10; overflow-y: scroll;">
 
             <!-- Modal content -->
             <div class="modal-content">
@@ -181,7 +181,7 @@
             </div>
 
         </div>
-        <div id="myModal2" class="modal" style="z-index:7;">
+        <div id="myModal2" class="modal" style="z-index:7; overflow-y: scroll;">
 
             <!-- Modal content -->
             <div class="modal-content">
