--- a/public/index.html
+++ b/public/index.html
@@ -223,6 +223,8 @@
             modal.style.display = "none";
             $('#input').hide();
                 $('#buttonNew').hide();
+                $('#input').val("");
+                $('#input').val("");
         }
 
         var modal2 = document.getElementById('myModal2');
@@ -246,6 +248,7 @@
        $("#input2").hide()
        $("#input3").hide()
        $("#input4").hide()
+       $('#input').val("");
         }
 
         // When the user clicks anywhere outside of the modal, close it
@@ -261,6 +264,7 @@
        $("#input2").hide()
        $("#input3").hide()
        $("#input4").hide()
+       $('#input').val("");
             }
         }
     </script>
